@@ -2,20 +2,24 @@ package com.example.demo1.controllers;
 
 import com.example.demo1.mappers.SolicitudVerificacionMapper;
 import com.example.demo1.models.dtos.ErrorResponseDTO;
-import com.example.demo1.models.dtos.SolicitudVerificacion.SolicitudVerificacionDTO;
+import com.example.demo1.models.dtos.SolicitudVerificacion.SolicitudVerificacionRequestDTO;
 import com.example.demo1.models.dtos.SolicitudVerificacion.SolicitudVerificacionResponseDTO;
 import com.example.demo1.models.enums.EstadoSolicitud;
 import com.example.demo1.models.entidades.SolicitudVerificacion;
 import com.example.demo1.models.entidades.UserModel;
+import com.example.demo1.models.enums.TypeUser;
 import com.example.demo1.repositories.ISolucitudVerifRepository;
 import com.example.demo1.repositories.IUserRepository;
+import com.example.demo1.services.SolicitudVerificacionService;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -23,38 +27,57 @@ import java.util.Optional;
 @RequestMapping("/api/solicitudes-verificacion")
 public class SolicitudVerifController {
 
-    @Autowired
+
+    private final SolicitudVerificacionService solicitudVerificacionService;
+    
+
     private ISolucitudVerifRepository solicitudVerifRepository;
 
-    @Autowired
+
     private IUserRepository userRepository;
 
+    public SolicitudVerifController(SolicitudVerificacionService solicitudVerificacionService) {
+        this.solicitudVerificacionService = solicitudVerificacionService;
+    }
+
     @PostMapping("/{idUser}")
-    public ResponseEntity<?> crearSolicitudVerificacion(@PathVariable Long idUser,@Valid @RequestBody SolicitudVerificacionDTO nuevaSolicituddDTO){
+    @PreAuthorize("hasRole('USER')")
+    public ResponseEntity<?> crearSolicitudVerificacion(@PathVariable Long idUser,@Valid @RequestBody SolicitudVerificacionRequestDTO nuevaSolicitudDTO){
             Optional<UserModel> user = userRepository.findById(idUser);
             if(user.isEmpty()) {
                 return new ResponseEntity<>(HttpStatus.NOT_FOUND);
             }
 
-        UserModel userModel = user.get();
-        if(userModel.isVerified()) {
-            return ResponseEntity.badRequest().body("El usuario ya has sido verificado.");
+        if (nuevaSolicitudDTO.getArchivoDemoUrl() != null &&
+                !nuevaSolicitudDTO.getArchivoDemoUrl().matches("^(http|https)://.*$")) {
+            return ResponseEntity.badRequest().body("URL de archivo demo inválida");
         }
 
-        List<SolicitudVerificacion> pendientes = solicitudVerifRepository.findByUsernameAndEstadoSolicitud(userModel, EstadoSolicitud.PENDIENTE);
-        if(!pendientes.isEmpty()) {
-            return ResponseEntity.badRequest().body("Ya se ha realizado una solicitud.");
+        //Verificar si ya tiene asignado el rol solicitado
+        UserModel userModel = user.get();
+        if(userModel.getTypeUser() == nuevaSolicitudDTO.getRolSolicitado()) {
+            return ResponseEntity.badRequest().body("Ya tienes asignado el rol " + nuevaSolicitudDTO.getRolSolicitado());
+
         }
-        SolicitudVerificacion nuevaSolicitud = SolicitudVerificacionMapper.toEntity(nuevaSolicituddDTO);
+
+        //Verificar si ya está en proceso una solicitud de verificación
+        List<SolicitudVerificacion> pendientes = solicitudVerifRepository.findByUserAndEstadoSolicitud(userModel, EstadoSolicitud.PENDIENTE);
+        if(!pendientes.isEmpty()) {
+            return ResponseEntity.badRequest().body("Ya tiene una solicitud pendiente de resolución.");
+        }
+        SolicitudVerificacion nuevaSolicitud = SolicitudVerificacionMapper.toEntity(nuevaSolicitudDTO);
         nuevaSolicitud.setUser(userModel);
+        nuevaSolicitud.setRolSolicitado(nuevaSolicitudDTO.getRolSolicitado());
+
         SolicitudVerificacion savedSolicitud = solicitudVerifRepository.save(nuevaSolicitud);
         return ResponseEntity.ok(SolicitudVerificacionMapper.toResponseDTO(savedSolicitud));
     }
 
     @GetMapping("/userModel/{idUser}")
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<SolicitudVerificacionResponseDTO>> getSolicitudVerificacion(@PathVariable Long idUser){
         return userRepository.findById(idUser).map(userModel -> {
-            List<SolicitudVerificacion> solicitudes = solicitudVerifRepository.findByUsername(userModel.getUsername());  //
+            List<SolicitudVerificacion> solicitudes = solicitudVerifRepository.findByUser(userModel);  //
             List<SolicitudVerificacionResponseDTO> dtos = solicitudes.stream()
                     .map(SolicitudVerificacionMapper::toResponseDTO)
                     .toList();
@@ -64,9 +87,10 @@ public class SolicitudVerifController {
 
 
     @GetMapping
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<SolicitudVerificacionResponseDTO>> getSolicitudesPorEstado(@RequestParam(required = false) EstadoSolicitud estado){
         List<SolicitudVerificacion> solicitudes = estado != null ?
-                solicitudVerifRepository.findByEstado(estado) :
+                solicitudVerifRepository.findByEstadoSolicitud(estado) :
                 solicitudVerifRepository.findAll();
 
         List<SolicitudVerificacionResponseDTO> dtos = solicitudes.stream()
@@ -77,33 +101,36 @@ public class SolicitudVerifController {
 
 
     @PutMapping("/{idSolicitud}/aprobar")
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<SolicitudVerificacionResponseDTO> aprobarSolicitudVerificacion(@PathVariable Long idSolicitud){
-        return solicitudVerifRepository.findById(idSolicitud).map(solicitudVerificacion -> {
-            solicitudVerificacion.setEstadoSolicitud(EstadoSolicitud.ACEPTADO);
-            solicitudVerificacion.getUser().setVerified(true);
-            SolicitudVerificacion savedSolicitud = solicitudVerifRepository.save(solicitudVerificacion);
-            userRepository.save(solicitudVerificacion.getUser());
-            return ResponseEntity.ok(SolicitudVerificacionMapper.toResponseDTO(savedSolicitud));
-        }).orElse(ResponseEntity.notFound().build());
+        try {
+            SolicitudVerificacionResponseDTO response =
+                    solicitudVerificacionService.aprobarSolicitud(idSolicitud);
+            return ResponseEntity.ok(response);
+        } catch (IllegalStateException e) {
+            return ResponseEntity.badRequest().build();
+        }
+        
 
     }
 
     @PutMapping("/{idSolicitud}/rechazar")
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<SolicitudVerificacionResponseDTO> rechazarSolicitud(@PathVariable Long idSolicitud, @RequestBody(required = false) String observacionAdmin){
-        return solicitudVerifRepository.findById(idSolicitud).map(solicitudVerificacion -> {
-            solicitudVerificacion.setEstadoSolicitud(EstadoSolicitud.RECHAZADO);
-            if(observacionAdmin != null) {
-                solicitudVerificacion.setObservacionesAdmin(observacionAdmin);
-            }
-            SolicitudVerificacion savedSolicitud = solicitudVerifRepository.save(solicitudVerificacion);
-            return ResponseEntity.ok(SolicitudVerificacionMapper.toResponseDTO(savedSolicitud));
-        }).orElse(ResponseEntity.notFound().build());
-}
+        try {
+            SolicitudVerificacionResponseDTO response =
+                    solicitudVerificacionService.rechazarSolicitud(idSolicitud, observacionAdmin);
+            return ResponseEntity.ok(response);
+        } catch (IllegalStateException e) {
+            return ResponseEntity.badRequest().build();
+        }
+
+    }
 
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ErrorResponseDTO> handleValidationExceptions(MethodArgumentNotValidException ex) {
-        String message = ex.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+        String message = ex.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
         return ResponseEntity.badRequest()
                 .body(new ErrorResponseDTO(message, "VALIDATION_ERROR"));
     }
